Some changes and fixes
Changes:
- Beacon now decides what entity egg spawns
- Beacon now throw Zhongos and fungi maggots
- Beacon now can spawn in the world
- Other small changes

Fixes:
- Beacon was constantly in aggressive attack mode